hubo un problema que no funcionaba la base de datos, ya funciona de nuevo

--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -200,9 +200,8 @@
                 return response.json();
             }).then((data) => { // una vez que consulta vuelve con la data
                 const table = document.querySelector("tbody");
-                const entrenamientosRecientes = data.reverse();
-
-                entrenamientosRecientes.forEach(Entrenamiento => {
+                
+                data.forEach(Entrenamiento => {
                     const newRow = document.createElement("tr");
 
                     const DiaSemana = document.createElement("td"); // Dia de la Semana
