--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -65,9 +65,20 @@
                     <section class="modal-card-body">
                         <form id="form-entrenamiento">
                             <div class="field">
-                                <label class="label"> Dia de la semana</label>
+                                <label class="label">Dia de la Semana</label>
                                 <div class="control">
-                                    <input class="input" type="text" name="dia_semana" required>
+                                    <div class="select is-fullwidth">
+                                        <select name="nivel_usuario" id="nivel_usuario" required>
+                                            <option value="" disabled selected>Seleccioná un nivel</option>
+                                            <option value="Lunes">Lunes</option>
+                                            <option value="Martes">Martes</option>
+                                            <option value="Miercoles">Miercoles</option>
+                                            <option value="Jueves">Jueves</option>
+                                            <option value="Viernes">Viernes</option>
+                                            <option value="Sabado">Sabado</option>
+                                            <option value="Domingo">Domingo</option>
+                                        </select>
+                                    </div>
                                 </div>
                             </div>
 
