Tenia una falla el boton agregar entrenamiento, ya lo arregle

--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -68,7 +68,7 @@
                                 <label class="label">Dia de la Semana</label>
                                 <div class="control">
                                     <div class="select is-fullwidth">
-                                        <select name="nivel_usuario" id="nivel_usuario" required>
+                                        <select name="dia_semana" id="dia_semana" required>
                                             <option value="" disabled selected>Seleccioná un dia</option>
                                             <option value="Lunes">Lunes</option>
                                             <option value="Martes">Martes</option>
