resuelvo conflicto de la pull requests

--- a/Proyecto TP/frontend/html/arma_rutina.html
+++ b/Proyecto TP/frontend/html/arma_rutina.html
@@ -70,7 +70,7 @@
                                 <div class="control">
                                     <div class="select is-fullwidth">
                                         <select name="dia_semana" id="dia_semana" required>
-                                            <option value="" disabled selected>Seleccioná un nivel</option>
+                                            <option value="" disabled selected>Seleccioná un dia</option>
                                             <option value="Lunes">Lunes</option>
                                             <option value="Martes">Martes</option>
                                             <option value="Miercoles">Miercoles</option>
