--- a/Proyecto TP/frontend/html/ejercicios.html
+++ b/Proyecto TP/frontend/html/ejercicios.html
@@ -204,6 +204,25 @@
         formEj.addEventListener("submit", async (e) => {
             e.preventDefault();
 
+            const descripcion = formEj.descripcion.value.trim();
+            const ejercicio = formEj.ejercicio.value.trim();
+            const series = formEj.series.value.trim();
+            const repeticiones = formEj.repeticiones.value.trim();
+
+            if (descripcion.length > 100) {
+                alert("La descripción no puede superar los 100 caracteres.");
+                return; 
+            } else if (ejercicio.length > 50) {
+                alert("El nombre del ejercicio es demasiado largo.");
+                return; 
+            } else if (series < 0  || repeticiones < 0) {
+                alert("Las series y repeticiones deben ser números positivos.");
+                return; 
+            } else if (isNaN(series) || isNaN(repeticiones)) {
+                alert("Las series y repeticiones deben ser números válidos.");
+                return; 
+            }
+
             const datos = {
                 entrenamiento_id: id, // id del entrenamiento
                 grupo_muscular: formEj.grupo_muscular.value,
